fix: cors + application.properties corrected